[package]
edition = "2021"
name = "embedded-ads1220"
description = "Embedded Driver for the Texas Instruments ADS1220 ADC"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EllaFoxo/embedded-ads1220"
readme = "README.md"
authors = ["Ella Fox <ella@fox.gal>"]
categories = ["embedded", "hardware-support"]
keywords = ["ads1220", "adc", "embedded-hal", "driver", "analog"]

[lib]
crate-type = ["lib"]

[features]
defmt = ["dep:defmt"]

[dependencies]
embedded-hal = { version = "^1.0", default-features = false }
embedded-hal-async = { version = "^1.0", default-features = false }
defmt = { version = "^0.3", optional = true }
tartan-bitfield = "1.2.0"
strum_macros = "0.27.1"
num_enum = { version = "0.7.3", default-features = false }
